# git-tidy

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  implementation.md  readme.md
.github/workflows/: release.yml
src/: config.rs  error.rs  filters.rs  git_operations.rs  lib.rs  main.rs
