[package]
name = "git-tidy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
git2 = { version = "0.19", features = ["vendored-openssl"] }
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
colored = "2.1"
regex = "1.11"
glob = "0.3"
dirs = "5.0"
